Fixed icon alignment for CP > Calendars > Calendars

--- a/packages/plugin/src/Resources/css/calendars/index.css
+++ b/packages/plugin/src/Resources/css/calendars/index.css
@@ -1,4 +1,5 @@
 a.icon.clone {
+  display: inline-block;
   color: rgba(123, 135, 147, 0.5);
 }
 a.icon.clone svg {
